--- a/css/layout.css
+++ b/css/layout.css
@@ -103,7 +103,7 @@ header .social li {
    padding: 0;
 }
 header .social li a { color: #fff; }
-header .social li a:hover { color: #11ABB0; }
+header .social li a:hover { color: #B22222; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -125,7 +125,7 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #11ABB0; }
+header .scrolldown a:hover { color: #B22222; }
 
 /* primary navigation
 --------------------------------------------------------------------- */
@@ -187,7 +187,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #11ABB0; }
+ul#nav li.current a { color: #B22222; }
 
 
 /* ------------------------------------------------------------------ */
@@ -196,13 +196,13 @@ ul#nav li.current a { color: #11ABB0; }
 
 #about {
    background: #2B2B2B;
-   padding-top: 96px;
+   padding-top: 16px;
    padding-bottom: 66px;
    overflow: hidden;
 }
 
 #about a, #about a:visited  { color: #fff; }
-#about a:hover, #about a:focus { color: #11ABB0; }
+#about a:hover, #about a:focus { color: #B22222; }
 
 #about h2 {
    font: 22px/30px 'Montserrat', sans-serif;
@@ -215,8 +215,8 @@ ul#nav li.current a { color: #11ABB0; }
 }
 #about .profile-pic {
    position: relative;
-   width: 200px;
-   height: 205px;
+   width: 25%;
+   height: 25%;
    border-radius: 100%;
 }
 #about .contact-details { width: 41.66667%; }
@@ -251,7 +251,7 @@ ul#nav li.current a { color: #11ABB0; }
    overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #11ABB0; }
+#resume a, #resume a:visited  { color: #B22222; }
 #resume a:hover, #resume a:focus { color: #313131; }
 
 #resume h1 {
@@ -260,7 +260,7 @@ ul#nav li.current a { color: #11ABB0; }
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #11ABB0;
+   border-bottom: 3px solid #B22222;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -812,7 +812,7 @@ call-to-action .button {
 }
 #contact .section-head { margin-bottom: 42px; }
 
-#contact a, #contact a:visited  { color: #11ABB0; }
+#contact a, #contact a:visited  { color: #B22222; }
 #contact a:hover, #contact a:focus { color: #fff; }
 
 #contact h1 {
@@ -822,17 +822,21 @@ call-to-action .button {
    color: #EBEEEE;
    margin-bottom: 6px;
 }
-#contact h1 span { display: none; }
-#contact h1:before {
-   font-family: 'FontAwesome';
-   content: "\f0e0";
-	padding-right: 10px;
-	font-size: 72px;
-   line-height: 72px;
-   text-align: left;
-   float: left;
-   color: #ebeeee;
-}
+#contact h1 span { 
+   display: block; 
+   }
+
+#contact .section-head { margin-bottom: 12px; }
+#contact .header-col { padding-top: 0; }
+#contact .header-col h1:before { content: none; }
+#contact .section-head p.lead { text-align: center;}
+#contact .section-head h1 {
+      font: 16px/24px 'Montserrat', sans-serif;            
+      text-align: center;   
+      margin-bottom: 30px;
+      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
+   }  
+#contact .section-head p.lead { text-align: center;}
 
 #contact h4 {
    font: 16px/24px 'opensans-bold', sans-serif;
@@ -873,7 +877,7 @@ call-to-action .button {
 #contact textarea:focus,
 #contact select:focus {
 	color: #fff;
-	background-color: #11ABB0;
+	background-color: #B22222;
 }
 #contact button.submit {
 	text-transform: uppercase;
@@ -892,7 +896,7 @@ call-to-action .button {
 	background: #fff;
 }
 #contact span.required {
-	color: #11ABB0;
+	color: #B22222;
 	font-size: 13px;
 }
 #message-warning, #message-success {
@@ -904,7 +908,7 @@ call-to-action .button {
    margin-left: 26%;
 }
 #message-warning { color: #D72828; }
-#message-success { color: #11ABB0; }
+#message-success { color: #B22222; }
 
 #message-warning i,
 #message-success i {
@@ -988,7 +992,7 @@ footer .social-links li {
     margin: 0;
     padding: 0;
     margin-left: 42px;
-    color: #11ABB0;
+    color: #B22222;
 }
 
 footer .social-links li:first-child { margin-left: 0; }
